# rsmpi

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  index.html  rustfmt.toml  search-index.js
.github/workflows/: lint.yaml  test.yaml
abort_on_panic/: PanicGuard.t.html  abort_on_panic.m.html  index.html  macro.abort_on_panic.html  sidebar-items.js  struct.PanicGuard.html
build-probe-mpi/: Cargo.toml
build-probe-mpi/src/: lib.rs
build-probe-mpi/src/os/: mod.rs  unix.rs  windows.rs
ci/: deploy-crate.sh  deploy-crates.sh  deploy-docs.sh  deploy_key.enc  install-mpi-windows.sh  install-mpi.sh  run-examples.sh  save-credentials.sh
ci/windows/: build.ps1  install.ps1  test.ps1
conv/: ApproxFrom.t.html  ApproxInto.t.html  ApproxScheme.t.html  ConvAsUtil.t.html  ConvUtil.t.html  DefaultApprox.t.html  RoundToNearest.t.html  RoundToNegInf.t.html  RoundToPosInf.t.html  RoundToZero.t.html  ValueFrom.t.html  ValueInto.t.html  Wrapping.t.html  enum.DefaultApprox.html  enum.RoundToNearest.html  enum.RoundToNegInf.html  enum.RoundToPosInf.html  enum.RoundToZero.html  enum.Wrapping.html  index.html  macro.TryFrom!.html  macro.TryFrom.html  sidebar-items.js  trait.ApproxFrom.html  trait.ApproxInto.html  trait.ApproxScheme.html  trait.ConvAsUtil.html  trait.ConvUtil.html  trait.TryFrom.html  trait.TryInto.html  trait.ValueFrom.html  trait.ValueInto.html
conv/errors/: FloatError.t.html  GeneralError.t.html  GeneralErrorKind.t.html  NegOverflow.t.html  NoError.t.html  PosOverflow.t.html  RangeError.t.html  RangeErrorKind.t.html  Saturate.t.html  Unrepresentable.t.html  UnwrapOk.t.html  UnwrapOrInf.t.html  UnwrapOrInvalid.t.html  UnwrapOrSaturate.t.html  enum.FloatError.html  enum.GeneralError.html  enum.GeneralErrorKind.html  enum.NoError.html  enum.RangeError.html  enum.RangeErrorKind.html  index.html  sidebar-items.js  struct.NegOverflow.html  (+7 more)
custom_derive/: index.html
derive-test/: Cargo.toml
examples/: all_gather.rs  all_gather_bool.rs  all_gather_varcount.rs  all_to_all.rs  arrays.rs  attributes.rs  barrier.rs  broadcast.rs  broadcast_complex.rs  buffered.rs  cartesian.rs  cartesian_map.rs  comm_name.rs  complex_datatype.rs  complex_numbers.rs  contiguous.rs  datatype_dup.rs  derive_multiple_thread_init.rs  derive_nonthreaded_panic.rs  derive_postfinalize_panic.rs  derive_preinit_panic.rs  dot_enzyme.rs  duplicate.rs  dyn_communicator.rs  env_inq.rs  gather.rs  gather_varcount.rs  group.rs  immediate.rs  immediate_all_gather.rs  immediate_all_gather_varcount.rs  immediate_all_to_all.rs  immediate_barrier.rs  immediate_barrier_multiple.rs  immediate_broadcast.rs  immediate_gather.rs  immediate_gather_varcount.rs  immediate_multiple_barrier.rs  immediate_multiple_requests.rs  immediate_multiple_test.rs  (+27 more)
libffi/: ffi_call.m.html  index.html  macro.ffi_call.html  sidebar-items.js
libffi_sys/: AIO_PRIO_DELTA_MAX.v.html  ARG_MAX.v.html  BC_BASE_MAX.v.html  BC_DIM_MAX.v.html  BC_SCALE_MAX.v.html  BC_STRING_MAX.v.html  CHARCLASS_NAME_MAX.v.html  COLL_WEIGHTS_MAX.v.html  DELAYTIMER_MAX.v.html  EXPR_NEST_MAX.v.html  FFI_64_BIT_MAX.v.html  FFI_CLOSURES.v.html  FFI_NATIVE_RAW_API.v.html  FFI_SIZEOF_ARG.v.html  FFI_SIZEOF_JAVA_RAW.v.html  FFI_TRAMPOLINE_SIZE.v.html  FFI_TYPE.t.html  FFI_TYPE_COMPLEX.v.html  FFI_TYPE_DOUBLE.v.html  FFI_TYPE_FLOAT.v.html  FFI_TYPE_INT.v.html  FFI_TYPE_LAST.v.html  FFI_TYPE_LONGDOUBLE.v.html  FFI_TYPE_POINTER.v.html  FFI_TYPE_SINT16.v.html  FFI_TYPE_SINT32.v.html  FFI_TYPE_SINT64.v.html  FFI_TYPE_SINT8.v.html  FFI_TYPE_STRUCT.v.html  FFI_TYPE_UINT16.v.html  FFI_TYPE_UINT32.v.html  FFI_TYPE_UINT64.v.html  FFI_TYPE_UINT8.v.html  FFI_TYPE_VOID.v.html  HOST_NAME_MAX.v.html  LINE_MAX.v.html  LINK_MAX.v.html  LOGIN_NAME_MAX.v.html  MAX_CANON.v.html  MAX_INPUT.v.html  (+325 more)
mpi/: Count.t.html  Tag.t.html  enum.Threading.html  fn.initialize.html  fn.initialize_with_threading.html  fn.time.html  fn.time_resolution.html  index.html  sidebar-items.js  time_resolution.v.html  type.Address.html  type.Count.html  type.Error.html  type.Tag.html
mpi-derive/: Cargo.toml
mpi-derive/examples/: struct.rs
mpi-derive/src/: lib.rs
mpi-sys/: Cargo.toml  build.rs
mpi-sys/src/: lib.rs  rsmpi.c  rsmpi.h
mpi_sys/: ADIOI_FileD.t.html  HAVE_MPI_GREQUEST.v.html  MPICH.v.html  MPICH_ERR_FIRST_MPIX.v.html  MPICH_ERR_LAST_CLASS.v.html  MPICH_ERR_LAST_MPIX.v.html  MPICH_HAS_C2F.v.html  MPICH_NAME.v.html  MPICH_NUMVERSION.v.html  MPICH_RELEASE_TYPE_ALPHA.v.html  MPICH_RELEASE_TYPE_BETA.v.html  MPICH_RELEASE_TYPE_PATCH.v.html  MPICH_RELEASE_TYPE_RC.v.html  MPICH_VERSION.v.html  MPIIMPL_ADVERTISES_FEATURES.v.html  MPIIMPL_HAVE_MPI_COMBINER_DARRAY.v.html  MPIIMPL_HAVE_MPI_COMBINER_DUP.v.html  MPIIMPL_HAVE_MPI_COMBINER_SUBARRAY.v.html  MPIIMPL_HAVE_MPI_GREQUEST.v.html  MPIIMPL_HAVE_MPI_INFO.v.html  MPIIMPL_HAVE_MPI_TYPE_CREATE_DARRAY.v.html  MPIIMPL_HAVE_STATUS_SET_BYTES.v.html  MPIIMPL_HAVE_STATUS_SET_INFO.v.html  MPIR_Combiner_enum.t.html  MPIR_Combiner_enum_MPI_COMBINER_CONTIGUOUS.v.html  MPIR_Combiner_enum_MPI_COMBINER_DARRAY.v.html  MPIR_Combiner_enum_MPI_COMBINER_DUP.v.html  MPIR_Combiner_enum_MPI_COMBINER_F90_COMPLEX.v.html  MPIR_Combiner_enum_MPI_COMBINER_F90_INTEGER.v.html  MPIR_Combiner_enum_MPI_COMBINER_F90_REAL.v.html  MPIR_Combiner_enum_MPI_COMBINER_HINDEXED.v.html  MPIR_Combiner_enum_MPI_COMBINER_HINDEXED_BLOCK.v.html  MPIR_Combiner_enum_MPI_COMBINER_HINDEXED_INTEGER.v.html  MPIR_Combiner_enum_MPI_COMBINER_HVECTOR.v.html  MPIR_Combiner_enum_MPI_COMBINER_HVECTOR_INTEGER.v.html  MPIR_Combiner_enum_MPI_COMBINER_INDEXED.v.html  MPIR_Combiner_enum_MPI_COMBINER_INDEXED_BLOCK.v.html  MPIR_Combiner_enum_MPI_COMBINER_NAMED.v.html  MPIR_Combiner_enum_MPI_COMBINER_RESIZED.v.html  MPIR_Combiner_enum_MPI_COMBINER_STRUCT.v.html  (+2728 more)
rsmpi-ffi/: Cargo.toml  build.rs
rsmpi-ffi/src/: rsmpi.h
src/: attribute.rs  checked_bool.rs  collective.rs  datatype.rs  environment.rs  error.rs  lib.rs  point_to_point.rs  raw.rs  request.rs  rsmpi.c  rsmpi.h  topology.rs  traits.rs  transmute.rs
tests/: derive_tests.rs  trait_object_safety_test.rs
(+534 files in other folders)
