[package]
name = "mpi"
version = "0.6.0"
authors = [
    "Benedikt Steinbusch <ben@rockshrub.de>",
    "Andrew Gaspar <andrew.gaspar@outlook.com>"
]
description = "Message Passing Interface bindings for Rust"
homepage = "https://github.com/rsmpi/rsmpi"
repository = "https://github.com/rsmpi/rsmpi"
documentation = "https://docs.rs/mpi"
readme = "README.md"
keywords = [ "message-passing", "parallel" ]
categories = [ "concurrency" ]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.65"

[workspace]
members = ["mpi-derive"]

[features]
default = ["user-operations"]

user-operations = ["libffi"]
derive = ["mpi-derive"]

[dependencies]
conv = "0.3.3"
libffi = { version = "3.2.0", optional = true }
# Public dependency ("derive" feature)
memoffset = "0.9"
mpi-derive = { path = "mpi-derive", version = "0.1", optional = true }
mpi-sys = { path = "mpi-sys", version = "0.2" }
# Public dependency ("derive" feature)
once_cell = "1.18"
smallvec = "1.11.1"
thiserror = "1.0.49"

[build-dependencies]
build-probe-mpi = { path = "build-probe-mpi", version = "0.1.2" }

# The following tests depend on specific features

[[example]]
name = "struct"
required-features = ["derive"]

[[example]]
name = "derive_multiple_thread_init"
required-features = ["derive"]

[[example]]
name = "derive_nonthreaded_panic"
required-features = ["derive"]

[[example]]
name = "derive_postfinalize_panic"
required-features = ["derive"]

[[example]]
name = "derive_preinit_panic"
required-features = ["derive"]

[package.metadata.release]
tag-name = "{{crate_name}}-{{version}}"
pre-release-replacements = [
  { file="README.md", search="version = \"[0-9.]*\"", replace="version = \"{{version}}\"" },
  { file="src/lib.rs", search="mpi = \"[0-9.]*\"", replace="mpi = \"{{version}}\"" },
  { file="CHANGELOG.md", search="`main` branch", replace="{{version}} ({{date}})" }
]
