[package]
name = "build-probe-mpi"
version = "0.1.2"
authors = [
    "Benedikt Steinbusch <ben@rockshrub.de>",
    "Andrew Gaspar <andrew.gaspar@outlook.com>"
]
description = "Probes the system for an installation of an MPI library"
homepage = "https://github.com/rsmpi/rsmpi"
repository = "https://github.com/rsmpi/rsmpi"
categories = [ "development-tools::build-utils" ]
license = "MIT/Apache-2.0"
rust-version = "1.57"
edition = "2021"

[dependencies]

[target.'cfg(unix)'.dependencies]
pkg-config = "0.3.26"
enquote = "1.1.0"

[package.metadata.release]
tag-name = "{{crate_name}}-{{version}}"
