[package]
name = "mpi-sys"
version = "0.2.0"
authors = [
    "Benedikt Steinbusch <ben@rockshrub.de>",
    "Andrew Gaspar <andrew.gaspar@outlook.com>"
]
description = "Message Passing Interface bindings for Rust"
homepage = "https://github.com/rsmpi/rsmpi"
repository = "https://github.com/rsmpi/rsmpi"
documentation = "https://docs.rs/mpi"
keywords = [ "message-passing", "parallel" ]
categories = [ "external-ffi-bindings" ]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.65"

[dependencies]

[build-dependencies]
cc = "1.0.83"
bindgen = "0.68"
build-probe-mpi = { path = "../build-probe-mpi", version = "0.1.2" }

[package.metadata.release]
tag-name = "{{crate_name}}-{{version}}"
