[package]
name = "mpi-ffi"
version = "0.5.0"
authors = [
    "Benedikt Steinbusch <ben@rockshrub.de>",
    "Andrew Gaspar <andrew.gaspar@outlook.com>"
]
description = "Message Passing Interface bindings for Rust"
homepage = "https://github.com/bsteinb/rsmpi"
repository = "https://github.com/bsteinb/rsmpi"
documentation = "http://bsteinb.github.io/rsmpi/"
keywords = [ "message-passing", "parallel" ]
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]

[build-dependencies]
gcc = "0.3"
bindgen = "0.32"
build-probe-mpi = { path = "../build-probe-mpi", version = "0.1" }